--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,14 @@ services:
     command: redis-server --requirepass 1234 --appendonly yes
     ports:
       - 6379:6379
+
+  kafka_aux_kafka:
+    container_name: kafka_aux_kafka
+    platform: linux/amd64
+    image: apache/kafka:3.7.1
+    ports:
+      - 9092:9092
     volumes:
       - .redis:/var/lib/postgresql/data
+
 
